<resources>
    <string name="app_name">TabulaRasa 2.0</string>
    <string name="login_text">Zaloguj</string>
    <string name="permission_not_granted">Nie przyznano uprawnień</string>
    <string name="fields_empty">Wymagane pola nie są uzupełnione</string>
    <string name="network_not_conn">Brak połączeia sieciowego</string>
    <string name="password">Hasło</string>
    <string name="login">Login</string>
    <string name="access">Uzyskaj dostęp</string>
    <string name="add_book">Dodaj książkę</string>
    <string name="title">Tytuł</string>
    <string name="author">Autor</string>
    <string name="publish_year">Rok wydania</string>
    <string name="publisher">Wydawca</string>
    <string name="additional_info">Dodatkowe informacje</string>
    <string name="go_back">Wstecz</string>
    <string name="add">Dodaj</string>
    <string name="write_message">Napisz wiadomość</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="send_message">Wyślij wiadomość</string>
    <string name="favourites">Moje ulubione</string>
    <string name="search">Wyszukaj</string>
    <string name="my_account">Moje konto</string>
    <string name="hello_msg">Witaj</string>
    <string name="hello_msg_params">Witaj %1$s</string>
    <string name="edit_account_data">Edycja danych konta</string>
    <string name="mailbox">Skrzynka odbiorcza</string>
    <string name="user_search">Szukaj użytkownika</string>
    <string name="my_products">Moje udostępnione</string>
    <string name="my_favourites">Moja lista ulubionych</string>
    <string name="search_book">Szukaj ksiązki</string>
    <string name="logout">Wyloguj</string>
    <string name="register">Rejestracja</string>
    <string name="password_again">Powtórz hasło</string>
    <string name="name">Imię</string>
    <string name="surename">Nazwisko</string>
    <string name="phone">Numer telefonu</string>
    <string name="birthday">Data urodzenia</string>
    <string name="register_info">Oświadczam, że zapoznałem się z Warunkami funkcjonowania serwisu i je akceptuję</string>
    <string name="register_info_not_conf">Nie potwierdzono przeczytania warunków korzystania z usługi</string>
    <string name="rep_passwd_problem">Pole hasło i potwierdź hasło mają różne wartości</string>
    <string name="create_account">Załóż konto</string>
    <string name="close">Zamknij</string>
    <string name="city">Miasto</string>
    <string name="email">Adres email</string>
    <string name="street">Ulica</string>
    <string name="edit">Edytuj</string>
    <string name="messages_browse_title">Przeglądaj wiadomości</string>
    <string name="messages_new">Nowa wiadomość</string>
    <string name="conversations">Konwersacje</string>
    <string name="settinds">Ustawienia</string>
    <string name="my_shared_title">Moje udostępnione</string>
    <string name="product_detail_title">Sczegóły produktu</string>
    <string name="premium_card_button">Konto premium / płatności</string>
    <string name="credt_card_number">Nr karty kredytowej</string>
    <string name="ccv_code">Kod CCV</string>
    <string name="expiration_date">Data ważności</string>
    <string name="edit_credit_card_title">Dane karty kredytowej</string>
    <string name="chat_with">Rozmowa z %1$s</string>
    <string name="exchange_details_title">Szczegóły wymiany</string>
    <string name="cover_content_description">Okładka książki</string>
    <string name="exchange_section1_title">To oddajesz</string>
    <string name="exchange_section2_title">To dostajesz</string>
    <string name="exchange_confirm_exchange">Potwierdź</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="genre">Gatunek</string>
    <string name="contact_with_owner">Kontakt z posiadaczem</string>
    <string name="remove_conversation">Usuń rozmowę</string>
    <string name="productsBrowseStage1Title">Wyszukaj książkę</string>
    <string name="edit_help_title">Wprowadzenie</string>
    <string name="recommend_me">Poleć mi coś!</string>
    <string name="sex">Płeć</string>
    <string name="settings">Ustawienia</string>
    <string name="theme1">Motyw 1</string>
    <string name="theme2">Motyw 2</string>
    <string name="background_change">Zmień tło</string>
    <string name="first_message">Witam, interesuje mnie wymiana za pozycję "%1$s", w zamian mogę zaoferować </string>
    <string name="help_text">Drogi użytkowniku, \nzanim rozpoczniesz korzystanie z aplikacji przeczytaj to wprowadzenie. \n\n\nAplikacja przeznaczona jest do ułatwienia wymiany książek między miłaśnikami czytania. \nPamiętaj, aby wymienić się z innym użytkownikiem musisz posiadać książkę na wymianę. \n\nPrzesuwając ekran główny w prawo i lewo otwiera się menu pozwalające na nawigację w inne obaszary aplikacji. \n\nDo Twojej dyspozycji jest opcja umożliwiająca pokazanie propozycji, tj. "polecanych" książek bazująca na liście ulubionych.</string>
    <string name="buy">Kup</string>
    <string name="subscription_cancel">Anuluj subskrypcję</string>
    <string name="account_valid_date">Konto ważne do ...</string>
    <string name="premium_price">Cena konta - 10zł/30dni</string>

    <string-array name="sex">
        <item name="male">Mężczyzna</item>
        <item name="female">Kobieta</item>
        <item name="other">Inna</item>
    </string-array>
</resources>
