<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayoutScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- android:background="#DDCBCB" -->
    <TextView
        android:id="@+id/settingsTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#E0E0E0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsListLayoutMain"
        android:layout_width="269dp"
        android:layout_height="498dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="55dp"
        android:background="#F3EDED"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextViewTitle"
        >


        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="#FFFFFF"
            android:text="@string/background_change"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/settingsToggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ToggleButton
            android:id="@+id/settingsToggleButton"
            style="@style/Tabularasa.Button.Round.Colored"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textOff="@string/theme1"
            android:textOn="@string/theme2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
            />

        <Button
            android:id="@+id/settingsButtonLogout"
            style="@style/Tabularasa.Button.Round.Colored"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toTopOf="@+id/settingsButtonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageButton
            android:id="@+id/settingsButtonBack"
            style="@style/Tabularasa.Button.Round.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/abc_vector_test"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>