<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productsAddLayoutScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activities_bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/productsAddTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDCBCB"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:text="@string/add_book"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/productsAddListLayoutMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="#F3EDED"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsAddTextViewTitle">

        <ImageView
            android:id="@+id/productDetailsImageViewCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/cover_content_description"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/productsAddEditTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_photo"
            />

        <EditText
            android:id="@+id/productsAddEditTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productsAddEditTextAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productDetailsImageViewCover"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <EditText
            android:id="@+id/productsAddEditTextAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/author"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productsAddEditTextYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsAddEditTextTitle" />

        <EditText
            android:id="@+id/productsAddEditTextYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/publish_year"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/productsAddEditTextPublisher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsAddEditTextAuthor" />

        <EditText
            android:id="@+id/productsAddEditTextPublisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/publisher"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productsAddEditTextGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsAddEditTextYear" />

        <EditText
            android:id="@+id/productsAddEditTextGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/genre"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/productsAddEditTextAdditionalInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsAddEditTextPublisher"
            />

        <EditText
            android:id="@+id/productsAddEditTextAdditionalInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:gravity="top"
            android:hint="@string/additional_info"
            android:inputType="textMultiLine"
            android:lines="5"
            app:layout_constraintBottom_toTopOf="@+id/productsAddButtonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsAddEditTextGenre"
            />

        <ImageButton
            android:id="@+id/productsAddButtonBack"
            style="@style/Tabularasa.Button.Normal.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/abc_vector_test"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/productsAddButtonSendForm"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/productsAddButtonSendForm"
            style="@style/Tabularasa.Button.Round.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/productsAddButtonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productsAddButtonBack"
            app:layout_constraintTop_toTopOf="@+id/productsAddButtonBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>