<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productsDetailsLayoutScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/productsDetailsTextViewActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDCBCB"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:text="@string/product_detail_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/productsDetailsListLayoutMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="#F3EDED"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsDetailsTextViewActivityTitle">

        <TextView
            android:id="@+id/productsDetailsTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/productsDetailsTextViewAuthor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/productsDetailsTextViewAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/author"
            app:layout_constraintBottom_toTopOf="@+id/productsDetailsTextViewYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsDetailsTextViewTitle" />

        <TextView
            android:id="@+id/productsDetailsTextViewYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/publish_year"
            app:layout_constraintBottom_toTopOf="@+id/productsDetailsTextViewPublisher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsDetailsTextViewAuthor" />

        <TextView
            android:id="@+id/productsDetailsTextViewPublisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Login"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/publisher"
            app:layout_constraintBottom_toTopOf="@+id/productsDetailsTextViewAdditionalInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsDetailsTextViewYear" />

        <TextView
            android:id="@+id/productsDetailsTextViewAdditionalInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:gravity="top"
            android:hint="@string/additional_info"
            android:lines="5"
            app:layout_constraintBottom_toTopOf="@+id/productsDetailsButtonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productsDetailsTextViewPublisher" />

        <Button
            android:id="@+id/productsDetailsButtonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/productsDetailsButtonSendForm"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/productsDetailsButtonSendForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/productsDetailsButtonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productsDetailsButtonBack"
            app:layout_constraintTop_toTopOf="@+id/productsDetailsButtonBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>