<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/allTextViewTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#DDCBCB"
		android:paddingBottom="5dp"
		android:singleLine="false"
		android:text="@string/favourites"
		android:textAlignment="center"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/favouriteBooksEditTextSearch"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/search"
		android:textSize="24sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/favouriteTextViewTitle"
		/>

	<TextView
		android:id="@+id/favouriteBooksSeparator"
		android:layout_width="match_parent"
		android:layout_height="5dp"
		android:background="#000000"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/favouriteBooksEditTextSearch" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/favouriteBooksListBooks"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/favouriteBooksButtonBack"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/favouriteBooksSeparator"
		app:layout_constraintVertical_bias="0.0">

	</androidx.recyclerview.widget.RecyclerView>

	<Button
		android:id="@+id/favouriteBooksButtonBack"
		android:layout_width="109dp"
		android:layout_height="68dp"
		android:layout_marginStart="20dp"
		android:layout_marginBottom="20dp"
		android:text="@string/go_back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>